// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <input
    autocomplete="none"
    class="apptr__form-input-string apptr__input apptr__input-string"
    id="StringWidgetId"
    maxlength="100"
    name="StringWidgetId"
    pattern="[0-9]{1,2}"
    type="number"
    value="test"
  />
</div>
`;

exports[`Autocomplete choices 1`] = `
<div>
  <input
    id="StringWidgetId"
    list="datalist_for_StringWidgetId"
    maxlength="255"
    name="StringWidgetId"
    value=""
  />
  <datalist
    id="datalist_for_StringWidgetId"
  >
    <option>
      test
    </option>
    <option>
      test1
    </option>
  </datalist>
</div>
`;

exports[`Default props 1`] = `
<div>
  <input
    autocomplete="none"
    class="apptr__form-input-string apptr__input apptr__input-string"
    id="StringWidgetId"
    maxlength="255"
    name="StringWidgetId"
    type="text"
    value=""
  />
</div>
`;

exports[`Disabled 1`] = `
<div>
  <input
    autocomplete="none"
    class="apptr__form-input-string apptr__input apptr__input-string"
    disabled=""
    id="StringWidgetId"
    maxlength="255"
    name="StringWidgetId"
    type="text"
    value=""
  />
</div>
`;
